footer (More or less done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" herf="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title id="title">The Odin Project - Google Homepage</title>
     </head>
     <body>
-        <div id="logo" class="logo">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
+     <div id="top-left">
+         <ul>
+             <li>About</li>
+             <li>Store</li>
+         </ul>
+     </div>
+     <div id="top-right">
+         <ul>
+             <li>Gmail</li>
+             <li>Images</li>
+         </ul>
+     </div>
+     <div id="logo" class="logo">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"/>
     </div>
     </body>
+    <footer>
+        <div class="country" id="country">
+            <p>United Kingdom</p>
+        </div>
+<div class="footer-links" id="footer-links">
+        <div class="footer-links-left" id="footer-links-left">
+            <ul>
+                <li>Advertising</li>
+                <li>Business</li>
+                <li>How Search works</li> 
+            </ul>
+        </div>
+
+        <div class="footer-links-right" id="footer-links-right">
+            <ul>
+                <li>Privacy</li>
+                <li>Terms</li>
+                <li>Settings</li> 
+            </ul>
+        </div>
+    </div>
+    </footer>
 </html>
