working on top bar/links/nav

--- a/index.html
+++ b/index.html
@@ -4,28 +4,38 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <title id="title">The Odin Project - Google Homepage</title>
     </head>
+
     <body>
-     <div id="top-left">
+        <div class="top-links" id="top-links">
+            <div class="top-left" id="top-left">
          <ul>
              <li>About</li>
              <li>Store</li>
          </ul>
-     </div>
-     <div id="top-right">
+            </div>
+            <div class="top-right" id="top-right">
          <ul>
              <li>Gmail</li>
              <li>Images</li>
          </ul>
-     </div>
+            </div>
+    </div>
+ <div class="searchbox" id="searchbox">
      <div id="logo" class="logo">
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"/>
     </div>
+</div>
+
     </body>
+
     <footer>
+
         <div class="country" id="country">
             <p>United Kingdom</p>
         </div>
+
 <div class="footer-links" id="footer-links">
+
         <div class="footer-links-left" id="footer-links-left">
             <ul>
                 <li>Advertising</li>
@@ -41,6 +51,7 @@
                 <li>Settings</li> 
             </ul>
         </div>
-    </div>
+
+ </div>
     </footer>
 </html>
