added icon top nav

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
          <ul>
              <li>Gmail</li>
              <li>Images</li>
+             <li><img src="./img/icon.png"></li>
          </ul>
             </div>
     </div>
