--- a/index.html
+++ b/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
         <title id="title">The Odin Project - Google Homepage</title>
     </head>
 
     <body>
+
         <div class="top-links" id="top-links">
+            
             <div class="top-left" id="top-left">
          <ul>
              <li>About</li>
              <li>Store</li>
          </ul>
             </div>
+
             <div class="top-right" id="top-right">
-         <ul>
-             <li>Gmail</li>
-             <li>Images</li>
-             <li><img src="./img/icon.png"></li>
-         </ul>
+         <ol>
+            <li><button class="signin">Sign in</button></li>
+            <li><img class="icon" src="./img/icon.png"></li>
+            <li>Images</li>
+            <li>Gmail</li>
+         </ol>
             </div>
+
     </div>
- <div class="searchbox" id="searchbox">
+
      <div id="logo" class="logo">
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"/>
     </div>
-</div>
+
+    <div class="searchbox" id="searchbox">
+        <input type="text" placeholder="search...">
+    </div>
+
+    <div class="buttonbox">
+    <input class="googlebutton" value="Google Search" type="submit" />
+    <input class="googlebutton" value="I'm Feeling lucky" type="submit" /> 
+    </div>
 
     </body>
 
@@ -35,7 +49,7 @@
             <p>United Kingdom</p>
         </div>
 
-<div class="footer-links" id="footer-links">
+        <div class="footer-links" id="footer-links">
 
         <div class="footer-links-left" id="footer-links-left">
             <ul>
