microphone icon done

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
             <div class="top-right" id="top-right">
          <ol>
-            <li><button class="signin">Sign in</button></li>
-            <li><img class="icon" src="./img/icon.png"></li>
-            <li>Images</li>
-            <li>Gmail</li>
+            <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"><button class="signin">Sign in</button></a></li>
+            <li><a href="https://www.google.co.uk/intl/en/about/products?tab=wh"><img class="icon" src="./img/icon.png"></a></li>
+            <li><a href="https://www.google.co.uk/imghp?hl=en&tab=wi&ogbl">Images</a></li>
+            <li><a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a></li>
          </ol>
             </div>
 
@@ -33,13 +33,16 @@
     </div>
 
     <div class="searchbox" id="searchbox">
-        <input type="text" placeholder="search...">
+        <input type="text" />
+        <img class="glass" src="img/" />
+        <button type="button" class="mic" title="search by voice"></button>
     </div>
 
     <div class="buttonbox">
     <input class="googlebutton" value="Google Search" type="submit" />
     <input class="googlebutton" value="I'm Feeling lucky" type="submit" /> 
     </div>
+    <div class="link"><a href="https://blog.google/inside-google/company-announcements/coronavirus-covid19-response/?utm_source=google&utm_medium=hpp&utm_campaign=cv">Coronavirus: How Google is helping people</a></div>
 
     </body>
 
