--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
 
     <div class="searchbox" id="searchbox">
-        <input type="text" />
-        <img class="glass" src="img/" />
-        <button type="button" class="mic" title="search by voice"></button>
+        <img class="glass" src="img/glass.png" alt="I couldn't find the exact glass icon so i took a screenshot hence the terrible quality... :(" />
+        <input type="search"/>
+        <button type="button" class="mic" title="search by voice"></button>   
     </div>
 
     <div class="buttonbox">
@@ -56,17 +56,17 @@
 
         <div class="footer-links-left" id="footer-links-left">
             <ul>
-                <li>Advertising</li>
-                <li>Business</li>
-                <li>How Search works</li> 
+                <li><a href="https://www.google.com/intl/en_uk/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
+                <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a></li>
+                <li><a href="https://google.com/search/howsearchworks/?fg=1">How Search works</a></li> 
             </ul>
         </div>
 
         <div class="footer-links-right" id="footer-links-right">
             <ul>
-                <li>Privacy</li>
-                <li>Terms</li>
-                <li>Settings</li> 
+                <li><a href="https://policies.google.com/privacy?fg=1">Privacy</a></li>
+                <li><a href="https://policies.google.com/terms?fg=1">Terms</a></li>
+                <li><a href="https://www.google.com/preferences?hl=en">Settings</a></li> 
             </ul>
         </div>
 
